feat: sound effect, translation support