@@ -1,6 +1,7 @@
 package dev.azuuure.konata.screen.widget;
 
 import dev.azuuure.konata.KonataMod;
+import net.minecraft.client.gui.tooltip.Tooltip;
 import net.minecraft.client.gui.widget.SliderWidget;
 import net.minecraft.text.Text;
 
@@ -9,14 +10,26 @@ public class DelaySliderWidget extends SliderWidget {
     private float delaySeconds;
 
     public DelaySliderWidget(float delayMillis) {
-        // Convert milliseconds to seconds for display and slider value
-        super(0, 0, 150, 20, Text.literal("Delay: %.2f s".formatted(delayMillis / 1000f)), delayMillis / 1000f / 30f);
+        super(
+                0, 0, 150, 20,
+                Text.translatable(
+                        "konata.settings.delay",
+                        String.format("%.1f", delayMillis / 1000f)
+                ),
+                delayMillis / 1000f / 30f
+        );
+
         this.delaySeconds = delayMillis / 1000f;
+        this.setTooltip(Tooltip.of(Text.translatable("konata.settings.delay.tooltip")));
     }
 
     @Override
     protected void updateMessage() {
-        this.setMessage(Text.literal("Delay: %.2f s".formatted(delaySeconds)));
+        this.setMessage(
+                Text.translatable("konata.settings.delay",
+                        String.format("%.1f", delaySeconds)
+                )
+        );
     }
 
     @Override
